[package]
name = "a2rwoz"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.52", features = ["derive"] }
indicatif = "0.18.3"
rayon = "1.11.0"
rustfft = "6.4.1"
